fix(cors): use allowedOriginPatterns(*) only — eliminates conflict with setAllowedOrigins